Payment module modified

--- a/Main_Project/src/main/resources/templates/checkouts.html
+++ b/Main_Project/src/main/resources/templates/checkouts.html
@@ -1,8 +1,5 @@
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
-    pageEncoding="ISO-8859-1"%>
- 
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Checkout</title>
@@ -18,13 +15,13 @@
        th:attr='data-key=${stripePublicKey}, 
          data-amount=${amount}, 
          data-currency=${currency}'
-       data-name='BidBuySell'
-       data-description='We might store your credit card details!!...'
+       data-name='Baeldung'
+       data-description='Spring course checkout'
        data-image
          ='https://www.baeldung.com/wp-content/themes/baeldung/favicon/android-chrome-192x192.png'
        data-locale='auto'
        data-zip-code='false'>
-    </script>
-	</form>
+   </script>
+</form>
 </body>
 </html>
