Updated the checkouts.html

--- a/Main_Project/src/main/resources/templates/checkouts.html
+++ b/Main_Project/src/main/resources/templates/checkouts.html
@@ -15,8 +15,8 @@
        th:attr='data-key=${stripePublicKey}, 
          data-amount=${amount}, 
          data-currency=${currency}'
-       data-name='Baeldung'
-       data-description='Spring course checkout'
+       data-name='BidBuySell'
+       data-description='We might save your card details!!..'
        data-image
          ='https://www.baeldung.com/wp-content/themes/baeldung/favicon/android-chrome-192x192.png'
        data-locale='auto'
