--- a/Main_Project/src/main/webapp/assets/css/styles.css
+++ b/Main_Project/src/main/webapp/assets/css/styles.css
@@ -4,10 +4,78 @@
 
 .product-list-item {
     margin-top: 10px;
+    margin-bottom: 10px;
     background-color: white;
 }
 
+.product-row {
+    background-color: white;
+    height: fit-content;
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+}
+
 .product-img {
-	width: 150px;
-  height: auto;	
+    background-color: aquamarine;
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
+.bid-button {
+    padding-top: 100px;
+}
+
+#bid-content {
+    background-color: antiquewhite;
+    align-content: center;
+}
+
+.content {
+    background-color: #f1f7fc;
+    height: 100%;
+}
+
+/* The Modal (background) */
+.modal {
+    display: contents; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+}
+
+.modal-footer {
+
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
