--- a/Main_Project/src/main/webapp/assets/css/Login-Form-Clean.css
+++ b/Main_Project/src/main/webapp/assets/css/Login-Form-Clean.css
@@ -18,7 +18,7 @@
   text-align: center;
   padding: 0 0 20px;
   font-size: 100px;
-  color: rgb(244,71,107);
+  color: #208f8f;
 }
 
 .login-clean form .form-control {
@@ -34,7 +34,7 @@
 }
 
 .login-clean form .btn-primary {
-  background: #f4476b;
+  background: #208f8f;
   border: none;
   border-radius: 4px;
   padding: 11px;
@@ -45,7 +45,7 @@
 }
 
 .login-clean form .btn-primary:hover, .login-clean form .btn-primary:active {
-  background: #eb3b60;
+  background: #208f8f;
 }
 
 .login-clean form .btn-primary:active {
