--- a/Main_Project/src/main/webapp/assets/css/Registration-Form-with-Photo.css
+++ b/Main_Project/src/main/webapp/assets/css/Registration-Form-with-Photo.css
@@ -6,7 +6,7 @@
 .register-photo .image-holder {
   display: table-cell;
   width: auto;
-  background: url(../../assets/img/meeting.jpg);
+  background: url(../../assets/img/online_shopping.jpg);
   background-size: cover;
 }
 
@@ -56,7 +56,7 @@
 }
 
 .register-photo form .btn-primary {
-  background: #f4476b;
+  background: #208f8f;
   border: none;
   border-radius: 4px;
   padding: 11px;
@@ -67,7 +67,7 @@
 }
 
 .register-photo form .btn-primary:hover, .register-photo form .btn-primary:active {
-  background: #eb3b60;
+  background: #208f8f
 }
 
 .register-photo form .btn-primary:active {
